css/main.css
/* ... */
@media all and (max-width: 500px) {
.testim .arrow {
  font-size: 1.5em;
}

.testim .cont div p {
  line-height: 25px;
}

}


/* Client Counter */
.statistic-section {
  padding-top: 70px;
  padding-bottom: 70px;
  background: #ffffff07;  /* fallback for old browsers */
  max-width: 1024PX;
  margin: auto;
  border-radius: 15px;
}

.count-title {
 font-size: 50px;
 font-weight: normal;
 margin-top: 10px;
 margin-bottom: 0;
 text-align: center;
 font-weight: bold;
 color: #fff;
}

.stats-text {
 font-size: 15px;
 font-weight: normal;
 margin-top: 15px;
 margin-bottom: 0;
 text-align: center;
 color: #fff;
 text-transform: uppercase;
 font-weight: bold;
}

.stats-line-black {
margin: 12px auto 0;
 width: 55px;
 height: 2px;
 background-color: #fff;
}
.stats-icon {
 font-size: 35px;
 margin: 0 auto;
 float: none;
 display: table;
 color: #fff;
}

@media (max-width: 992px) {
.counter {
 margin-bottom: 40px;
}
}


/* Map Responsive */
/* Start: Google Maps Responsive */
.map-responsive {
  overflow:hidden;
  padding-bottom:230px; /*Reduce este valor si el mapa fuera muy alto, por ejemplo 250px, puedes usar porcentajes, 50%*/
  position:relative;
  height:0;
}
.map-responsive iframe{
  left:0;
  top:0;
  height:100%;
  width:100%;
  position:absolute;
}
/* End: Google Maps Responsive */

